--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,7 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2em 0;
+		margin: 1 0 2em 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -3215,4 +3215,323 @@ input, select, textarea {
 				padding-left: 0;
 			}
 			
+	}
+	.card1 {
+		background-image: url(./images/sihimgwoblr.png);
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		max-width: 250px;
+		height: 350px;
+		border-radius: 5px;
+		padding: 1rem;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		gap: 7.5px;
+		transition: 0.5s ease;
+		color: white;
+	  }
+	  
+	  .card1::after {
+		content: "";
+		position: absolute;
+		inset: 0;
+		background-image:url(./images/sihimg.png);
+		opacity: 0;
+		transition: 0.3s ease;
+	  }
+	  
+	  .card1:hover::after {
+		opacity: 0.25;
+	  }
+	  
+	  .cardHeader {
+		text-transform: uppercase;
+		position: relative;
+		width: max-content;
+		font-weight: bold;
+		transition: all 0.5s ease;
+	  }
+	  .cardHeader::after {
+		content: "";
+		width: calc(100% + 1rem);
+		height: 2.5px;
+		transform: translateX(calc(-100% - 1rem));
+		background: #49bf9d;
+		bottom: -2px;
+		left: 0;
+		position: absolute;
+		opacity: 0;
+	  }
+	  
+	  .details {
+		z-index: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		transform: translateY(95%);
+		transition: all 0.5s ease;
+	  }
+	 
+	  .card1:hover .details {
+		transform: translateY(0%);
+		transition-delay: 0.5s;
+	  }
+	  .card1:hover .cardHeader::after {
+		transform: translateX(-1rem);
+		transition: 0.5s ease;
+		opacity: 0.5;
+	  }
+	  .card1:hover::after:hover {
+		transform: scale(1.1);
+		border-radius: 15px;
+	  }
+	  .card1 {
+		background-image: url(./images/sihimgwoblr.png);
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		max-width: 250px;
+		height: 350px;
+		border-radius: 5px;
+		padding: 1rem;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		gap: 7.5px;
+		transition: 0.5s ease;
+		color: white;
+	  }
+	  
+	  .card1::after {
+		content: "";
+		position: absolute;
+		inset: 0;
+		background-image:url(./images/sihimg.png);
+		opacity: 0;
+		transition: 0.3s ease;
+	  }
+	  
+	  .card1:hover::after {
+		opacity: 0.25;
+	  }
+	  
+	  .cardHeader {
+		text-transform: uppercase;
+		position: relative;
+		width: max-content;
+		font-weight: bold;
+		transition: all 0.5s ease;
+	  }
+	  .cardHeader::after {
+		content: "";
+		width: calc(100% + 1rem);
+		height: 2.5px;
+		transform: translateX(calc(-100% - 1rem));
+		background: #49bf9d;
+		bottom: -2px;
+		left: 0;
+		position: absolute;
+		opacity: 0;
+	  }
+	  
+	  .details {
+		z-index: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		transform: translateY(95%);
+		transition: all 0.5s ease;
+	  }
+	 
+	  .card1:hover .details {
+		transform: translateY(0%);
+		transition-delay: 0.5s;
+	  }
+	  .card1:hover .cardHeader::after {
+		transform: translateX(-1rem);
+		transition: 0.5s ease;
+		opacity: 0.5;
+	  }
+	  .card1:hover::after:hover {
+		transform: scale(1.1);
+		border-radius: 15px;
+	  }
+	  /*card2*/
+	  .card2 {
+		background-image: url(./images/.png);
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		max-width: 250px;
+		height: 350px;
+		border-radius: 5px;
+		padding: 1rem;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		gap: 7.5px;
+		transition: 0.5s ease;
+		color: white;
+	  }
+	  
+	  .card2::after {
+		content: "";
+		position: absolute;
+		inset: 0;
+		background-image:url(./images/sihimg.png);
+		opacity: 0;
+		transition: 0.3s ease;
+	  }
+	  
+	  .card2:hover::after {
+		opacity: 0.25;
+	  }
+	  
+	  .cardHeader {
+		text-transform: uppercase;
+		position: relative;
+		width: max-content;
+		font-weight: bold;
+		transition: all 0.5s ease;
+	  }
+	  .cardHeader::after {
+		content: "";
+		width: calc(100% + 1rem);
+		height: 2.5px;
+		transform: translateX(calc(-100% - 1rem));
+		background: #49bf9d;
+		bottom: -2px;
+		left: 0;
+		position: absolute;
+		opacity: 0;
+	  }
+	  
+	  .details {
+		z-index: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		transform: translateY(95%);
+		transition: all 0.5s ease;
+	  }
+	 
+	  .card2:hover .details {
+		transform: translateY(0%);
+		transition-delay: 0.5s;
+	  }
+	  .card2:hover .cardHeader::after {
+		transform: translateX(-1rem);
+		transition: 0.5s ease;
+		opacity: 0.5;
+	  }
+	  .card2:hover::after:hover {
+		transform: scale(1.1);
+		border-radius: 15px;
+	  }
+	  /*card3*/
+	  .card3 {
+		background-image: url(./images/.png);
+		background-size: cover;
+		background-position: center;
+		position: relative;
+		max-width: 250px;
+		height: 350px;
+		border-radius: 5px;
+		padding: 1rem;
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		gap: 7.5px;
+		transition: 0.5s ease;
+		color: white;
+	  }
+	  
+	  .card3::after {
+		content: "";
+		position: absolute;
+		inset: 0;
+		background-image:url(./images/.png);
+		opacity: 0;
+		transition: 0.3s ease;
+	  }
+	  
+	  .card3:hover::after {
+		opacity: 0.25;
+	  }
+	  
+	  .cardHeader {
+		text-transform: uppercase;
+		position: relative;
+		width: max-content;
+		font-weight: bold;
+		transition: all 0.5s ease;
+	  }
+	  .cardHeader::after {
+		content: "";
+		width: calc(100% + 1rem);
+		height: 2.5px;
+		transform: translateX(calc(-100% - 1rem));
+		background: #49bf9d;
+		bottom: -2px;
+		left: 0;
+		position: absolute;
+		opacity: 0;
+	  }
+	  
+	  .details {
+		z-index: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 5px;
+		transform: translateY(95%);
+		transition: all 0.5s ease;
+	  }
+	 
+	  .card3:hover .details {
+		transform: translateY(0%);
+		transition-delay: 0.5s;
+	  }
+	  .card3:hover .cardHeader::after {
+		transform: translateX(-1rem);
+		transition: 0.5s ease;
+		opacity: 0.5;
+	  }
+	  .card3:hover::after:hover {
+		transform: scale(1.1);
+		border-radius: 15px;
+	  }
+	  #fresh {
+		display: flex;
+		justify-content: space-between;
+		margin: 20px;
+		margin-left: auto;
+	}
+	
+	.card1,
+	.card3,
+	.card2 {
+		width: 50%; /* Adjust the width as needed */
+		border: 1px solid #ddd;
+		padding: 10px;
+		box-sizing: border-box;
+	}
+	
+	/* Responsive Styles */
+	@media (max-width: 768px) {
+		#fresh {
+			flex-direction: column;
+			align-items: center;
+		}
+	
+		.card1,
+		.card2 {
+			width: 100%;
+			margin-bottom: 20px;
+		}
 	}
